--- a/package.json
+++ b/package.json
@@ -13,52 +13,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~11.2.0",
-    "@angular/core": "~11.2.0",
-    "@angular/forms": "~11.2.0",
-    "@angular/platform-browser": "~11.2.0",
-    "@angular/platform-browser-dynamic": "~11.2.0",
-    "@angular/router": "~11.2.0",
-    "@capacitor/android": "^2.4.7",
-    "@capacitor/core": "2.4.7",
-    "@ionic/angular": "^5.5.2",
-    "@ionic/pwa-elements": "^3.0.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "@angular/common": "~19.0.5",
+    "@angular/core": "~19.0.5",
+    "@angular/forms": "~19.0.5",
+    "@angular/platform-browser": "~19.0.5",
+    "@angular/platform-browser-dynamic": "~19.0.5",
+    "@angular/router": "~19.0.5",
+    "@capacitor/android": "^6.2.0",
+    "@capacitor/core": "6.2.0",
+    "@capacitor/ios": "^6.2.0",
+    "@ionic/angular": "^8.4.1",
+    "@ionic/pwa-elements": "^3.3.0",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.4",
-    "@angular-eslint/builder": "2.0.2",
-    "@angular-eslint/eslint-plugin": "2.0.2",
-    "@angular-eslint/eslint-plugin-template": "2.0.2",
-    "@angular-eslint/template-parser": "2.0.2",
-    "@angular/cli": "~11.2.4",
-    "@angular/compiler": "~11.2.0",
-    "@angular/compiler-cli": "~11.2.0",
-    "@angular/language-service": "~11.2.0",
-    "@capacitor/cli": "2.4.7",
-    "@ionic/angular-toolkit": "^3.1.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "@angular-devkit/build-angular": "~19.0.6",
+    "@angular-eslint/builder": "19.0.2",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/cli": "~19.0.6",
+    "@angular/compiler": "~19.0.5",
+    "@angular/compiler-cli": "~19.0.5",
+    "@angular/language-service": "~19.0.5",
+    "@capacitor/cli": "6.2.0",
+    "@ionic/angular-toolkit": "^12.1.1",
+    "@types/jasmine": "~5.1.5",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "8.18.2",
+    "@typescript-eslint/parser": "8.18.2",
+    "ajv": "^7.2.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsdoc": "50.6.1",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "jasmine-core": "~5.5.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.0.2"
+    "ts-node": "~10.9.2",
+    "typescript": "^5.6.3"
   },
   "description": "An Ionic project"
 }
