--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~19.0.5",
     "@angular/platform-browser-dynamic": "~19.0.5",
     "@angular/router": "~19.0.5",
-    "@capacitor/android": "^6.2.0",
+    "@capacitor/android": "6.2.0",
     "@capacitor/core": "6.2.0",
     "@capacitor/ios": "^6.2.0",
     "@ionic/angular": "^8.4.1",
@@ -46,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "8.18.2",
     "@typescript-eslint/parser": "8.18.2",
     "ajv": "^7.2.4",
+    "cordova-android": "^13.0.0",
     "eslint": "^9.17.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsdoc": "50.6.1",
@@ -60,7 +61,21 @@
     "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-ionic-keyboard": "^2.0.5"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    }
+  }
 }
